Fixed word wrapping issues for task names

--- a/client/src/components/general/form/editable/editable.scss
+++ b/client/src/components/general/form/editable/editable.scss
@@ -51,6 +51,7 @@
 
 .edit-header-content {
     color: $primary-text;
+    overflow-wrap: break-word;
 }
 
 .edit-text-content {
